# AppleWin

./: CMakeLists.txt
resource/: CMakeLists.txt  CMakeResources.cmake
source/: Speaker.cpp
source/frontends/imgui/: CMakeLists.txt  emulator.cpp  emulator.h  gles.h  image.cpp  image.h  main.cpp
source/frontends/qt/: emulator.cpp  emulator.h  qapple.cpp  qtframe.cpp  qtframe.h  qvideo.cpp  qvideo.h
source/frontends/sa2/: CMakeLists.txt  emulator.cpp  main.cpp  utils.cpp  utils.h
source/frontends/sdl/: gamepad.cpp  main.cpp  sdirectsound.cpp  sdirectsound.h  utils.cpp  utils.h
source/frontends/sdl/imgui/: sdlimguiframe.cpp  sdlsettings.cpp
source/linux/windows/: dsound.cpp  dsound.h
